--- a/index.html
+++ b/index.html
@@ -10,28 +10,30 @@
 </head>
 
 <body>
-    <h1 class="heading">The Best Movie Quiz</h1>
+    <div class="full-game-area">
+        <h1 class="heading">The Best Movie Quiz</h1>
+        <div class="question-area">
+            <div class="game-question">This is where the questions should pop up</div>
+        </div>
 
-    <div class="question-area">
-        <span id="game-question"></span>
+        <div class="image-area">
+            <img class="game-images" src="assets/images/blade.png" alt="a vampire hunter named Blade">
+        </div>
+        <div class="game-buttons">
+            <!-- from left to right-->
+            <button data-type="game-button-1" class="btn-1">Answer 1</button>
+            <button data-type="game-button-2" class="btn-2">Answer 2</button>
+            <button data-type="game-button-3" class="btn-3">Answer 3</button>
+        </div>
+        <div class="game-tracking-area">
+            <div class="game-timer">00</div>
+            <div class="game-player-name">Name</div>
+            <div class="game-score">00</div>
+        </div>
     </div>
-
-    <div class="photo-area">
-        <img class="game-photo" src="assets/images/blade.png" alt="a vampire hunter named Blade">
-    </div>
-    <div class="game-buttons">
-        <!-- from left to right-->
-        <button data-type="game-button-1" class="btn-1"></button>
-        <button data-type="game-button-2" class="btn-2"></button>
-        <button data-type="game-button-3" class="btn-3"></button>
-    </div>
-
-    <div class="game-score"></div>
-    <div class="game-timer"></div>
-    <div class="player-name"></div>
-
 
     <footer class="page-footer">Placeholder footer</footer>
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
