add working function for showQuestion getNext correctAnswer and add it to eventlistener

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
         </div>
         <div class="game-buttons">
             <!-- from left to right-->
-            <button data-type="game-button-1" class="btn-1">Answer 1</button>
-            <button data-type="game-button-2" class="btn-2">Answer 2</button>
-            <button data-type="game-button-3" class="btn-3">Answer 3</button>
+            <button data-type="game-button-1" class="btn">The Daywalker</button>
+            <button data-type="game-button-2" class="btn buttonstyling-2">The Nightslayer</button>
+            <button data-type="game-button-3" class="btn">The Vampire Hunter</button>
         </div>
         <div class="game-tracking-area">
             <div class="game-timer">00</div>
             <div class="game-player-name">Name</div>
-            <div class="game-score">00</div>
+            <div id="game-score">0</div>
         </div>
     </div>
 
