add countdownTimer for game

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <button data-type="game-button-3" class="btn">The Vampire Hunter</button>
         </div>
         <div class="game-tracking-area">
-            <div class="game-timer">00</div>
+            <div id="game-timer">00</div>
             <div class="game-player-name">Name</div>
             <div id="game-score">0</div>
         </div>
