--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <div class="game-tracking-area">
             <div id="game-timer">00</div>
-            <div class="game-player-name">Name</div>
+            <div id="game-player-name">Name</div>
             <div id="game-score">0</div>
         </div>
     </div>
