add images to showQuestion and getNextQuestion-functions to generate new image for each Q

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
 
         <div class="image-area">
-            <img class="game-images" src="assets/images/img-question-0.jpeg" alt="a vampire hunter named Blade">
+            <img class="game-images" src="../assets/images/img-question-0.jpeg" alt="a vampire hunter named Blade">
         </div>
         <div class="game-buttons">
             <!-- from left to right-->
