add css styling to question text, image, buttons and trackers

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Best Movie Quiz</title>
+    <title>Jasmin's Movie Quiz</title>
 </head>
 
 <body>
     <div class="full-game-area">
         <h1 class="heading">The Best Movie Quiz</h1>
         <div class="question-area">
-            <div class="game-question">This is where the questions should pop up</div>
+            <div class="game-question">Blade, also know as?</div>
         </div>
 
         <div class="image-area">
@@ -25,10 +25,13 @@
             <button data-type="game-button-2" class="btn buttonstyling-2">The Nightslayer</button>
             <button data-type="game-button-3" class="btn">The Vampire Hunter</button>
         </div>
-        <div class="game-tracking-area">
+        <div class="dynamic-tracking-objects">
             <div id="game-timer">00</div>
-            <div id="game-player-name">Name</div>
             <div id="game-score">0</div>
+        </div>
+        <div class="static-tracking-objects">
+            <div id="timer-text">Time Left</div>
+            <div id="score-text">Score</div>
         </div>
     </div>
 
