add popup in element in html and create function to trigger when timer is 0 or questions are done

--- a/index.html
+++ b/index.html
@@ -34,6 +34,16 @@
             <div id="score-text">Score</div>
         </div>
     </div>
+    <div id="popup">
+        <form action="" id="form" method="post" name="form">
+        <h2>Submit Your Score!</h2>
+        <hr>
+        <input id="name" name="name" placeholder="Name" type="text">
+        <input id="email" name="email" placeholder="Email" type="text">
+        <textarea id="final-score" name="message"><p>0</p></textarea>
+        <a href="javascript:%20check_empty()" id="submit">Send</a>
+        </form>
+    </div>
 
     <footer class="page-footer">Placeholder footer</footer>
     <script src="assets/js/script.js"></script>
