--- a/index.html
+++ b/index.html
@@ -38,10 +38,12 @@
         <form action="" id="form" method="post" name="form">
         <h2>Submit Your Score!</h2>
         <hr>
+        <div id="final-score-text">Final Score</div>
+        <div id="final-score"><p>0</p></div>
         <input id="name" name="name" placeholder="Name" type="text">
+        <br>
         <input id="email" name="email" placeholder="Email" type="text">
-        <textarea id="final-score" name="message"><p>0</p></textarea>
-        <a href="javascript:%20check_empty()" id="submit">Send</a>
+        <button class="submit-button" href="javascript:%20check_empty()" id="submit">Submit</button>
         </form>
     </div>
 
