update responsivity to new styling

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         <hr>
         <div id="final-score-text">Final Score</div>
         <div id="final-score"><p>0</p></div>
-        <input id="name" name="name" placeholder="Name" type="text">
+        <input id="name" name="player-name" placeholder="Name" type="text">
         <br>
-        <input id="email" name="email" placeholder="Email" type="text">
+        <input id="email" name="email-adress" placeholder="Email" type="text">
         <button class="submit-button" href="javascript:%20check_empty()" id="submit">Submit</button>
         </form>
     </div>
