--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Jasmin's Movie Quiz</title>
 </head>
 
@@ -26,7 +26,7 @@
             <button data-type="game-button-3" class="btn">The Vampire Hunter</button>
         </div>
         <div class="dynamic-tracking-objects">
-            <div id="game-timer">00</div>
+            <div id="game-timer">00:00</div>
             <div id="game-score">0</div>
         </div>
         <div class="static-tracking-objects">
@@ -36,19 +36,35 @@
     </div>
     <div id="popup">
         <form action="" id="form" method="post" name="form">
-        <h2>Submit Your Score!</h2>
-        <hr>
-        <div id="final-score-text">Final Score</div>
-        <div id="final-score"><p>0</p></div>
-        <input id="name" name="player-name" placeholder="Name" type="text">
-        <br>
-        <input id="email" name="email-adress" placeholder="Email" type="text">
-        <button class="submit-button" href="javascript:%20check_empty()" id="submit">Submit</button>
+            <h2>Submit Your Score!</h2>
+            <hr>
+            <div id="final-score-text">Final Score</div>
+            <div id="final-score">
+                <p>0</p>
+            </div>
+            <input id="playerName" name="player-name" placeholder="Name" type="text" />
+            <br>
+            <input id="email-adress" name="email-adress" placeholder="Email" type="text" />
+            <button class="submit-button" id="submit" type="button">Submit</button>
         </form>
     </div>
+        <div id="game-rules-header"><h4>Game Rules</h4></div>
+        <div id="game-rules">
+            <p> You have 60 seconds to answer as many questions as possible.</p>
+            <p> Each correct answer is worth 1 point.</p>
+            <p> Wrong answers award no points and no deduction.</p>
+            <p> You can only answer each question once.</p>
+        </div>
 
     <footer class="page-footer">Placeholder footer</footer>
-    <script src="assets/js/script.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script type="text/javascript">
+        (function () {
+            // https://dashboard.emailjs.com/admin/account
+            emailjs.init('UWAWEmoF096jTsSFm');
+        })();
+    </script>
+    <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
