--- a/index.html
+++ b/index.html
@@ -56,11 +56,10 @@
             <p> You can only answer each question once.</p>
         </div>
 
-    <footer class="page-footer">Placeholder footer</footer>
+    <footer class="page-footer">@the photos on this page are stock/images licensed for creative use.</footer>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script type="text/javascript">
         (function () {
-            // https://dashboard.emailjs.com/admin/account
             emailjs.init('UWAWEmoF096jTsSFm');
         })();
     </script>
