add favicon, font, SEO-tags and some more styling

--- a/index.html
+++ b/index.html
@@ -6,18 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Jasmin's Movie Quiz</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
+    <meta name="description" content="Coolest Movie Quiz, A cool movie quiz by someone that watches a lot of them">
+    <meta name="keywords" content="Movies, Quiz, Cinema, Game, Actors, Fun, Directing">
+    <title>Movie Quiz Fanatics</title>
+    <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
 </head>
 
 <body>
+    <header id="header" class="heading">Coolest Movie-Quiz Ever</h1></header>
     <div class="full-game-area">
-        <h1 class="heading">The Best Movie Quiz</h1>
         <div class="question-area">
-            <div class="game-question">Blade, also know as?</div>
+            <div class="game-question">Blade, also known as?</div>
         </div>
 
         <div class="image-area">
-            <img class="game-images" src="../assets/images/img-question-0.jpeg" alt="a vampire hunter named Blade">
+            <img class="game-images" src="../assets/images/img-question-0.jpeg" alt="1 of 20 quiz images related to quiz-question">
         </div>
         <div class="game-buttons">
             <!-- from left to right-->
