add more to readme, fix file path for images

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <!--  An image that will load for each question     -->
         <div class="image-area">
-            <img class="game-images" src="../assets/images/img-question-0.jpeg" alt="1 of 20 quiz images related to quiz-question">
+            <img class="game-images" src="./assets/images/img-question-0.jpeg" alt="1 of 20 quiz images related to quiz-question">
         </div>
         <!--  The game buttons that make the game advance forward    -->
         <div class="game-buttons">
